test/files/neg/patmat-classtag-compound.check
patmat-classtag-compound.scala:14: warning: abstract type pattern A is unchecked since it is eliminated by erasure
    case b: A with Bar => true
            ^
1 warning
error: No warnings can be incurred under -Werror.
